# cpp_38.5

1/: CMakeLists.txt  main.cpp
2/: CMakeLists.txt  main.cpp  webEdit.ui
3/: CMakeLists.txt  blur.ui  main.cpp
